--- a/Lesson-1-Dice_Roller/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-1-Dice_Roller/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,11 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
+              android:orientation="vertical"
               tools:context=".MainActivity">
 
     <TextView
+            android:id="@+id/result_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
@@ -14,6 +16,7 @@
             android:textSize="30sp"/>
 
     <Button
+            android:id="@+id/roll_button"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="@string/roll"
