--- a/Lesson-2-Layouts/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-2-Layouts/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,24 @@
         android:hint="@string/hint"
         android:inputType="textPersonName" />
 
+    <Button
+        android:id="@+id/done_button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/layout_margin"
+        android:fontFamily="@font/roboto_thin"
+        android:text="@string/done" />
+
+    <TextView
+        android:id="@+id/nickname_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/layout_margin"
+        android:visibility="invisible" />
+
     <ImageView
         android:id="@+id/star_image"
         android:layout_width="match_parent"
