--- a/Lesson-6/andfun-kotlin-sleep-tracker/app/src/main/res/layout/fragment_sleep_quality.xml
+++ b/Lesson-6/andfun-kotlin-sleep-tracker/app/src/main/res/layout/fragment_sleep_quality.xml
@@ -40,7 +40,7 @@
             android:layout_marginTop="@dimen/margin"
             android:layout_marginBottom="@dimen/triple_margin"
             android:fontFamily="@font/roboto"
-            android:text="@string/how_was_hour_sleep"
+            android:text="@{sleepTrackerViewModel.nightsString}"
             android:textSize="@dimen/title_text_size"
             app:layout_constraintBottom_toTopOf="@+id/quality_zero_image"
             app:layout_constraintStart_toStartOf="parent"
