--- a/Lesson-6/andfun-kotlin-sleep-tracker/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/Lesson-6/andfun-kotlin-sleep-tracker/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -38,6 +38,8 @@
              better and more efficient way to do this, and you will learn about
              RecyclerView in a later lesson. -->
 
+
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -68,6 +70,7 @@
         <Button
             android:id="@+id/start_button"
             style="@style/SleepButtons"
+            android:onClick="@{() ->  sleepTrackerViewModel.onStartTracking()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin"
@@ -80,6 +83,7 @@
         <Button
             android:id="@+id/stop_button"
             style="@style/SleepButtons"
+            android:onClick="@{() -> sleepTrackerViewModel.onStopTracking()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin"
@@ -98,6 +102,7 @@
             android:layout_marginEnd="@dimen/margin"
             android:layout_marginBottom="@dimen/margin"
             android:text="@string/clear"
+            android:onClick="@{() -> sleepTrackerViewModel.onClear()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
